# fuzzy_fraction

./: Cargo.toml  README.md
src/: lib.rs
src/structs/: fuzzy_fraction_function.rs  match_patterns.py  mod.rs  numbers.rs
